# poultry-lims-production

./: .dockerignore  .gitignore  .replit  BACKEND_PAGINATION_IMPLEMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER.md  DOCKER_QUICKSTART.md  DOCUMENTATION_PDF_Export_Enhancement.md  LOGIN_CREDENTIALS.md  PAGINATION_IMPLEMENTATION_PLAN.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  REMEMBER_ME_FEATURE.md  SETUP.md  TROUBLESHOOTING.md  backend_logs.txt  deploy-to-production.ps1  docker-compose-dev.yml  docker-compose-hub.yml  docker-compose.yml  optimize.ps1  package-lock.json  package.json  pyproject.toml  replit.md  run_migration.py  run_signature_migration.py  test-login.ps1  update_admin_password.py
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-dir-ltr-head-meta-charset-utf-8-meta-name-vie-1760867908621_1760867908621.txt
backend/: .dockerignore  .env.example  Dockerfile  PERFORMANCE_GUIDE.md  alembic.ini  init_db.py  requirements.txt  seed_test_data.py
backend/alembic/versions/: 20241231_add_missing_columns.py  20241231_database_optimization.py  add_drive_permissions.py
backend/app/: main.py
backend/app/alembic/: env.py
backend/app/core/: cache.py  config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  counter.py  department.py  drive.py  dropdown_data.py  (+11 more)
frontend/: .dockerignore  .env.example  DEPENDENCIES.md  Dockerfile  dependencies.txt  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: backup-database.sh  update-production.sh
(+110 files in other folders)
